[package]
name = "oxcart"
version = "0.2.0"
authors = ["Aaron Pribadi <aaron.pribadi@gmail.com>"]
license = "Artistic-2.0"
edition = "2021"
categories = ["memory-management"]
description = "a fast arena allocator"

[dependencies]
ptr-monotype = { git = "https://github.com/apribadi/ptr-monotype.git" }

[dev-dependencies]
bumpalo = "3.12.0"
copy_arena = "0.1.1"
expect-test = "1.4.0"
generational-arena = "0.2.8"
slab = "0.4.7"
slotmap = "1.0.6"
typed-arena = "2.0.2"

[features]
allocator_api = []
