[package]
authors = ["Aaron Pribadi <aaron.pribadi@gmail.com>"]
categories = ["memory-management", "rust-patterns"]
description = "a high performance arena allocator"
edition = "2021"
license = "Artistic-2.0"
name = "oxcart"
version = "0.1.0"

[dependencies]
allocator-api2 = { version = "0.2.16", default-features = false }

[dev-dependencies]
bump-scope = "0.1.8"
bumpalo = "3.16.0"
expect-test = "1.5.0"

[features]
allocator_api = []

[lints.rust]
elided_lifetimes_in_paths = "warn"
non_ascii_idents = "warn"
trivial_numeric_casts = "warn"
unreachable_pub = "warn"
unused_lifetimes = "warn"
unused_qualifications = "warn"
unused_results = "warn"
